--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 chrono = "0.4"
 tantivy = { git = "https://github.com/tantivy-search/tantivy" }
+itertools = "0.8"
 
 [dependencies.pyo3]
 version = "0.7.0"
