--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ crate-type = ["cdylib"]
 
 [dependencies]
 chrono = "0.4"
-tantivy = { git = "https://github.com/tantivy-search/tantivy", branch = "master" }
+tantivy = "0.11"
 itertools = "0.8"
+futures = "0.3"
 
 [dependencies.pyo3]
 version = "0.8"
