--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ futures = "0.3.1"
 [dependencies.pyo3]
 version = "0.8.5"
 features = ["extension-module"]
+
+[package.metadata.maturin]
+requires-python = ">=3.7"
+project-url = "https://github.com/tantivy-search/tantivy-py"
