--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ verify_ssl = true
 [dev-packages]
 maturin = ">=0.7.7"
 pytest = ">=4.0"
+e1839a8 = {path = "."}
 
 [requires]
 python_version = "3.8"
