--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ dist: bionic
 services:
   - docker
 
+- os:
+  linux
+  osx
+
 python:
   - 3.7
   - 3.8
@@ -45,7 +49,6 @@ before_script:
 
 jobs:
   include:
-      - os: osx
       - language: rust
         name: 'rust linters'
         install: rustup component add clippy rustfmt
