--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,8 @@ before_script:
 jobs:
   include:
       - os: osx
+        osx_image: xcode11.2
+        language: rust
       - language: rust
         name: 'rust linters'
         install: rustup component add clippy rustfmt
