travis: Try to fix a linker error on macos.

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ jobs:
             - pip3 install -U maturin pytest
             - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly
             - source "$HOME"/.cargo/env
+            - xcode-select --install
             - cargo build
             - cp target/debug/libtantivy.so tantivy/tantivy.so
         script:
