--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
         language: rust
         install:
             - pip3 install -U maturin pytest
-            - xcode-select --reset
+            - sudo xcode-select --reset
             - cargo build
             - cp target/debug/libtantivy.so tantivy/tantivy.so
         script:
