travis: Print out the install dir of the 3.8 python version under mac.

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ jobs:
         install:
             - pyenv install --list
             - pyenv install 3.8.0
+            - ls /Users/travis/.pyenv/versions/3.8.0
             - pip3 install -U maturin pytest
             - maturin list-python
             - cargo build
