--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,7 @@ env:
 
 install:
   - pip install --upgrade pip
-  - pip install -U maturin pytest
-  - maturin list-python
+  - pip install -U pytest
   - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly
   - source "$HOME"/.cargo/env
   - cargo build
@@ -69,7 +68,7 @@ jobs:
         stage: lint
 
 script:
-  - python3 -m pytest -v
+  - python -m pytest -v
 
 deploy:
     # Deploy for linux using the manylinux docker image.
