--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,15 @@ jobs:
             - cp target/debug/libtantivy.dylib tantivy/tantivy.so
         script:
             - python3 -m pytest -v
+      - os: windows
+        language: rust
+        install:
+            - choco install python --version 3.8.0
+            - python -m pip install --upgrade pip
+            - pip3 install -U maturin pytest
+            - maturin list-python
+            - cargo build
+            - cp target/debug/libtantivy.dll tantivy/tantivy.pyd
       - language: rust
         name: 'rust linters'
         install: rustup component add clippy rustfmt
