--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,7 @@ jobs:
             - maturin list-python
             - cargo build
             - cp target/debug/libtantivy.dll tantivy/tantivy.pyd
+        env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
       - language: rust
         name: 'rust linters'
         install: rustup component add clippy rustfmt
