--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,8 @@ jobs:
             - pip3 install -U maturin pytest
             - maturin list-python
             - cargo build
-            - dir /b /a /s
+            - dir
+            - dir target
             - cp target/debug/libtantivy.dll tantivy/tantivy.pyd
         env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
       - language: rust
