--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,7 @@ jobs:
             - cargo build
             - dir
             - dir target
+            - dir target/debug
             - cp target/debug/libtantivy.dll tantivy/tantivy.pyd
         env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
       - language: rust
