--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ jobs:
             - dir
             - dir target
             - dir target/debug
-            - cp target/debug/libtantivy.dll tantivy/tantivy.pyd
+            - cp target/debug/tantivy.dll tantivy/tantivy.pyd
         env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
       - language: rust
         name: 'rust linters'
