--- a/.travis.yml
+++ b/.travis.yml
@@ -63,15 +63,14 @@ jobs:
         language: rust
         install:
             - choco install python --version 3.8.0
+            - choco install python --version 3.7.5
             - python -m pip install --upgrade pip
             - pip3 install -U maturin pytest
             - maturin list-python
             - cargo build
-            - dir
-            - dir target
             - dir target/debug
             - cp target/debug/tantivy.dll tantivy/tantivy.pyd
-        env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
+        env: PATH=/c/Python37:/c/Python38:/c/Python38/Scripts:$PATH
       - language: rust
         name: 'rust linters'
         install: rustup component add clippy rustfmt
