--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ jobs:
         language: rust
         install:
             - choco install python --version 3.8.0
-            - choco install python --version 3.7.5
+            - choco install python --version 3.7.5 --side-by-side
             - python -m pip install --upgrade pip
             - pip3 install -U maturin pytest
             - maturin list-python
