--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tantivy-py"
+name = "tantivy"
 version = "0.11.0-rc.7"
 authors = ["Damir Jelić <poljar@termina.org.uk>"]
 edition = "2018"
