--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
+os: linux
 language: rust
 
 stages:
-  - test
   - lint
+  - test
 
 cache:
   pip: true
@@ -33,8 +34,7 @@ jobs:
       - os: linux
         dist: bionic
         language: python
-        python:
-            - '3.8'
+        python: 3.8
         services:
             - docker
         before_install:
@@ -47,7 +47,6 @@ jobs:
 
       - os: osx
         osx_image: xcode11.3
-        language: rust
         before_install:
             - pyenv install --list
             - pyenv install 3.8.0
@@ -61,7 +60,6 @@ jobs:
         env: PATH=/Users/travis/.pyenv/versions/3.8.0/bin:$PATH
 
       - os: windows
-        language: rust
         before_install:
             - choco install python --version 3.8.0
             - choco install python --version 3.7.5 --side-by-side
@@ -73,8 +71,7 @@ jobs:
             - cp target/debug/tantivy.dll tantivy/tantivy.pyd
         env: PATH=/c/Python38:/c/Python37:/c/Python38/Scripts:/c/Python37/Scripts:$PATH
 
-      - language: rust
-        name: 'rust linters'
+      - name: 'rust linters'
         install: rustup component add clippy rustfmt
         script:
             - cargo clippy
@@ -89,7 +86,6 @@ deploy:
         tags: true
         condition: $TRAVIS_OS_NAME = linux
         repo: tantivy-search/tantivy-py
-        python: 3.8
 
     # Deploy for macos using maturin directly
     - provider: script
