--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 chrono = "0.4.19"
-tantivy = "0.13.2"
+tantivy = "0.16.1"
 itertools = "0.9.0"
 futures = "0.3.5"
 
@@ -22,4 +22,4 @@ features = ["extension-module"]
 
 [package.metadata.maturin]
 requires-python = ">=3.7"
-project-url =  { Source = "https://github.com/quickwit-inc/tantivy-py" }
+project-url =  ["https://github.com/quickwit-inc/tantivy-py"]
