--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ license = "MIT"
 name = "tantivy"
 crate-type = ["cdylib"]
 
+[build-dependencies]
+pyo3-build-config = "0.15.1"
+
 [dependencies]
 chrono = "0.4.19"
 tantivy = "0.13.2"
