--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ license = "MIT"
 name = "tantivy"
 crate-type = ["cdylib"]
 
+[build-dependencies]
+pyo3-build-config = "0.15.1"
+
 [dependencies]
 chrono = "0.4.19"
 tantivy = "0.13.2"
@@ -17,7 +20,7 @@ itertools = "0.9.0"
 futures = "0.3.5"
 
 [dependencies.pyo3]
-version = "0.13.2"
+version = "0.14.5"
 features = ["extension-module"]
 
 [package.metadata.maturin]
