--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,6 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - run: pip install pipenv
-      - run: pipenv install --dev
-      - run: pipenv run maturin develop
-      - run: pipenv run pytest -v tests
+      - uses: Swatinem/rust-cache@v1
+      - run: python3 -m pip install nox
+      - run: nox -s test-${{ matrix.python-version }}
