--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
         python-version: [3.9]
         include:
           - os: ubuntu-latest
+            python-version: "3.11.0-alpha - 3.11.0"
+          - os: ubuntu-latest
             python-version: "3.10"
           - os: ubuntu-latest
             python-version: 3.8
