--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -1,9 +1,6 @@
 name: Test & Release
 
-on:
-  push:
-    branches:
-      - master
+on: workflow_dispatch
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -28,33 +25,39 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           architecture: x64
+
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@63eb9591781c46a70274cb3ebdf190fce92702e8
         with:
           toolchain: stable
           profile: minimal
           default: true
+
       - name: Build wheels - x86_64
         uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         with:
           target: x86_64
           args: --release --out dist --sdist
           maturin-version: ${{ env.MATURIN_VERSION }}
+
       - name: Install built wheel - x86_64
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
-          pip install pytest
-          pytest -v
+          pip install nox
+          nox
+
       - name: Build wheels - universal2
         uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         with:
           args: --release --universal2 --out dist
           maturin-version: ${{ env.MATURIN_VERSION }}
+
       - name: Install built wheel - universal2
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*universal2.whl --force-reinstall
-          pip install pytest
-          pytest -v
+          pip install nox
+          nox
+
       - name: Upload wheels
         uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2
         with:
@@ -77,24 +80,28 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           architecture: ${{ matrix.target }}
+
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@63eb9591781c46a70274cb3ebdf190fce92702e8
         with:
           toolchain: stable
           profile: minimal
           default: true
+
       - name: Build wheels
         uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         with:
           target: ${{ matrix.target }}
           args: --release --out dist
           maturin-version: ${{ env.MATURIN_VERSION }}
+
       - name: Install built wheel
         shell: bash
         run: |
           python -m pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
-          pip install pytest
-          python -m pytest -v
+          pip install nox
+          nox
+
       - name: Upload wheels
         uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2
         with:
@@ -117,6 +124,7 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           architecture: x64
+
       - name: Build wheels
         uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         with:
@@ -124,12 +132,14 @@ jobs:
           manylinux: auto
           args: --release --out dist
           maturin-version: ${{ env.MATURIN_VERSION }}
+
       - name: Install built wheel
         if: matrix.target == 'x86_64'
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
-          pip install pytest
-          pytest -v
+          pip install nox
+          nox
+
       - name: Upload wheels
         uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2
         with:
@@ -151,6 +161,7 @@ jobs:
       - uses: actions/setup-python@b55428b1882923874294fa556849718a1d7f2ca5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+
       - name: Build wheels
         uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         with:
@@ -158,6 +169,7 @@ jobs:
           manylinux: auto
           args: --release --out dist
           maturin-version: ${{ env.MATURIN_VERSION }}
+
       - uses: uraimo/run-on-arch-action@cd5f294c3b7be88bc5b708fe25e1af36818f9ead
         if: matrix.target != 'ppc64'
         name: Install built wheel
@@ -171,8 +183,9 @@ jobs:
             pip3 install -U pip
           run: |
             pip3 install ${{ env.PACKAGE_NAME }} --no-index --find-links dist/ --force-reinstall
-            pip install pytest
-            pytest -v
+            pip install nox
+            nox
+
       - name: Upload wheels
         uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2
         with:
@@ -197,6 +210,7 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           architecture: x64
+
       - name: Build wheels
         uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         with:
@@ -204,6 +218,7 @@ jobs:
           manylinux: musllinux_1_2
           args: --release --out dist
           maturin-version: ${{ env.MATURIN_VERSION }}
+
       - name: Install built wheel
         if: matrix.target == 'x86_64-unknown-linux-musl'
         uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185
@@ -212,9 +227,10 @@ jobs:
           options: -v ${{ github.workspace }}:/io -w /io
           run: |
             apk add py3-pip
-            pip3 install -U pip pytest
+            pip3 install -U pip nox
             pip3 install ${{ env.PACKAGE_NAME }} --no-index --find-links /io/dist/ --force-reinstall
-            python3 -m pytest
+            nox
+
       - name: Upload wheels
         uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2
         with:
@@ -240,6 +256,7 @@ jobs:
       - uses: actions/setup-python@b55428b1882923874294fa556849718a1d7f2ca5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+
       - name: Build wheels
         uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         with:
@@ -247,6 +264,7 @@ jobs:
           manylinux: musllinux_1_2
           args: --release --out dist
           maturin-version: ${{ env.MATURIN_VERSION }}
+
       - uses: uraimo/run-on-arch-action@d9e985ee32020b12e9cafe5b7d52cf0122bb7609
         name: Install built wheel
         with:
@@ -255,10 +273,11 @@ jobs:
           githubToken: ${{ github.token }}
           install: |
             apk add py3-pip
-            pip3 install -U pip pytest
+            pip3 install -U pip nox
           run: |
             pip3 install ${{ env.PACKAGE_NAME }} --no-index --find-links dist/ --force-reinstall
-            python3 -m pytest
+            nox
+
       - name: Upload wheels
         uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2
         with:
@@ -289,6 +308,7 @@ jobs:
       - uses: actions/setup-python@b55428b1882923874294fa556849718a1d7f2ca5
         with:
           python-version: pypy${{ matrix.python-version }}
+
       - name: Build wheels
         uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         with:
@@ -296,12 +316,14 @@ jobs:
           target: ${{ matrix.target }}
           manylinux: auto
           args: --release --out dist -i pypy${{ matrix.python-version }}
+
       - name: Install built wheel
         if: matrix.target == 'x86_64'
         run: |
           pip install dist/${{ env.PACKAGE_NAME }}-*.whl --force-reinstall
-          pip install pytest
-          pytest -v
+          pip install nox
+          nox
+
       - name: Upload wheels
         uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2
         with:
