--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ name = "tantivy"
 crate-type = ["cdylib"]
 
 [build-dependencies]
-pyo3-build-config = "0.16.3"
+pyo3-build-config = "0.15.0"
 
 [dependencies]
 chrono = "0.4.19"
@@ -19,7 +19,9 @@ tantivy = "0.17"
 itertools = "0.10.3"
 futures = "0.3.21"
 serde_json = "1.0.64"
+serde = "1.0"
+serde_derive = "1.0"
 
 [dependencies.pyo3]
-version = "0.16.3"
+version = "0.15.0"
 features = ["extension-module"]
