--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,11 +1,45 @@
 name: Test & Release
 
 on:
-  workflow_dispatch:
+  push:
+    tags:
+      - '*'
 
 jobs:
+  create-release:
+    permissions:
+      contents: write  # for actions/create-release to create a release
+    name: create-release
+    runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.release.outputs.upload_url }}
+      release_version: ${{ env.RELEASE_VERSION }}
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504 # v1
+        with:
+          egress-policy: audit
+
+      - name: Get the release version from the tag
+        shell: bash
+        if: env.RELEASE_VERSION == ''
+        run: |
+          # See: https://github.community/t5/GitHub-Actions/How-to-get-just-the-tag-name/m-p/32167/highlight/true#M1027
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          echo "version is: ${{ env.RELEASE_VERSION }}"
+
+      - name: Create GitHub release
+        id: release
+        uses: actions/create-release@0cb9c9b65d5d1901c1f53e5e66eaf4afd303e70e # v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.RELEASE_VERSION }}
+          release_name: ${{ env.RELEASE_VERSION }}
+
   linux:
     runs-on: ubuntu-latest
+    needs: create-release
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504
@@ -25,8 +59,16 @@ jobs:
           name: wheels
           path: dist
 
+      - name: Upload release binaries
+        uses: alexellis/upload-assets@eaab1472d5c2f0df3115cac81136f03e7e61f771
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          asset_paths: '["./dist/tantivy-*"]'
+
   windows:
     runs-on: windows-latest
+    needs: create-release
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504
@@ -45,8 +87,16 @@ jobs:
           name: wheels
           path: dist
 
+      - name: Upload release binaries
+        uses: alexellis/upload-assets@eaab1472d5c2f0df3115cac81136f03e7e61f771
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          asset_paths: '["./dist/tantivy-*"]'
+
   macos:
     runs-on: macos-latest
+    needs: create-release
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504
@@ -65,7 +115,14 @@ jobs:
           name: wheels
           path: dist
 
-  release:
+      - name: Upload release binaries
+        uses: alexellis/upload-assets@eaab1472d5c2f0df3115cac81136f03e7e61f771
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          asset_paths: '["./dist/tantivy-*"]'
+
+  release-pypy:
     name: Release
     runs-on: ubuntu-latest
     needs: [ macos, windows, linux ]
@@ -88,7 +145,6 @@ jobs:
           args: --repository-url=https://test.pypi.org/legacy/ --skip-existing *
 
       - name: Publish to PyPI
-        if: "startsWith(github.ref, 'refs/tags/')"
         uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
