--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,11 +10,43 @@ on:
 #       - master
 
 jobs:
+  create-release:
+    permissions:
+      contents: write  # for actions/create-release to create a release
+    name: create-release
+    runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.release.outputs.upload_url }}
+      release_version: ${{ env.RELEASE_VERSION }}
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504 # v1
+        with:
+          egress-policy: audit
+
+      - name: Get the release version from the tag
+        shell: bash
+        if: env.RELEASE_VERSION == ''
+        run: |
+          # See: https://github.community/t5/GitHub-Actions/How-to-get-just-the-tag-name/m-p/32167/highlight/true#M1027
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          echo "version is: ${{ env.RELEASE_VERSION }}"
+
+      - name: Create GitHub release
+        id: release
+        uses: actions/create-release@0cb9c9b65d5d1901c1f53e5e66eaf4afd303e70e # v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.RELEASE_VERSION }}
+          release_name: ${{ env.RELEASE_VERSION }}
+
   linux:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         platform: [ 'x86_64-unknown-linux-gnu', 'aarch64-unknown-linux-gnu' ]
+    needs: create-release
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@8ca2b8b2ece13480cda6dacd3511b49857a23c09
@@ -57,12 +89,20 @@ jobs:
           name: wheels
           path: dist
 
+      - name: Upload release binaries
+        uses: alexellis/upload-assets@eaab1472d5c2f0df3115cac81136f03e7e61f771
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          asset_paths: '["./dist/tantivy-*"]'
+
   windows:
     runs-on: windows-latest
     strategy:
       matrix:
         target: [x64]
         python-version: ['3.8', '3.9', '3.10', '3.11']
+    needs: create-release
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@8ca2b8b2ece13480cda6dacd3511b49857a23c09
@@ -87,11 +127,19 @@ jobs:
           name: wheels
           path: dist
 
+      - name: Upload release binaries
+        uses: alexellis/upload-assets@eaab1472d5c2f0df3115cac81136f03e7e61f771
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          asset_paths: '["./dist/tantivy-*"]'
+
   macos:
     runs-on: macos-latest
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
+    needs: create-release
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@8ca2b8b2ece13480cda6dacd3511b49857a23c09
@@ -126,48 +174,12 @@ jobs:
           name: wheels
           path: dist
 
-  python-release-github:
-    runs-on: ubuntu-latest
-    needs: [ macos, windows, linux ]
-    permissions:
-      contents: write # To add assets to a release.
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@8ca2b8b2ece13480cda6dacd3511b49857a23c09 # v2.1.0
-        with:
-          disable-sudo: true
-          egress-policy: block
-          allowed-endpoints: >
-            api.github.com:443
-            github.com:443
-            static.rust-lang.org:443
-            uploads.github.com:443
-
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
-        with:
-          ref: ${{ github.head_ref }}
-
-      - uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af # v1.0.7
-        with:
-          profile: minimal
-          toolchain: stable
-
-      - name: Set up Python 3.8
-        uses: actions/setup-python@61a6322f88396a6271a6ee3565807d608ecaddd1 # v4.7.0
-        with:
-          python-version: 3.8
-
-      - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
-        with:
-          name: wheels
-          path: wheels
-
       - name: Upload release binaries
-        uses: alexellis/upload-assets@259de5111cb56966d046ced998941e93f91d2c93
+        uses: alexellis/upload-assets@eaab1472d5c2f0df3115cac81136f03e7e61f771
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          asset_paths: '["./wheels/tantivy-*"]'
+          asset_paths: '["./dist/tantivy-*"]'
 
   release-pypy:
     name: Release
@@ -193,9 +205,10 @@ jobs:
           packages-dir: wheels/
           skip-existing: true
 
-      - name: Publish package distributions to PyPI
-        if: always()
-        uses: pypa/gh-action-pypi-publish@b7f401de30cb6434a1e19f805ff006643653240e # v1.8.10
+      - name: Publish to PyPI
+        uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
           packages-dir: wheels/
           skip-existing: true
