--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -47,6 +47,10 @@ jobs:
           egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
 
       - uses: actions/checkout@d171c3b028d844f2bf14e9fdec0c58114451e4bf
+      - uses: actions/setup-python@7f80679172b057fc5e90d70d197929d454754a5a
+        with:
+          python-version: 3.9
+
       - uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         with:
           manylinux: auto
@@ -76,6 +80,10 @@ jobs:
           egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
 
       - uses: actions/checkout@d171c3b028d844f2bf14e9fdec0c58114451e4bf
+      - uses: actions/setup-python@7f80679172b057fc5e90d70d197929d454754a5a
+        with:
+          python-version: 3.9
+
       - uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         with:
           command: build
@@ -104,6 +112,11 @@ jobs:
           egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
 
       - uses: actions/checkout@d171c3b028d844f2bf14e9fdec0c58114451e4bf
+      - uses: actions/setup-python@7f80679172b057fc5e90d70d197929d454754a5a
+        with:
+          python-version: 3.9
+          architecture: x64
+
       - uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         with:
           command: build
