--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -53,12 +53,14 @@ jobs:
       - uses: actions/checkout@d171c3b028d844f2bf14e9fdec0c58114451e4bf
       - uses: actions/setup-python@7f80679172b057fc5e90d70d197929d454754a5a
         with:
-          python-version: 3.9
+          python-version: 3.8
+          architecture: x64
 
       - uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         env:
-          PYO3_PYTHON: python3.9
+          PYO3_PYTHON: python3.8
         with:
+          target: x86_64
           manylinux: auto
           command: build
           args: --release --sdist -o dist
@@ -88,11 +90,11 @@ jobs:
       - uses: actions/checkout@d171c3b028d844f2bf14e9fdec0c58114451e4bf
       - uses: actions/setup-python@7f80679172b057fc5e90d70d197929d454754a5a
         with:
-          python-version: 3.9
+          python-version: 3.8
 
       - uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         env:
-          PYO3_PYTHON: python3.9
+          PYO3_PYTHON: python3.8
         with:
           command: build
           args: --release -o dist
@@ -122,12 +124,12 @@ jobs:
       - uses: actions/checkout@d171c3b028d844f2bf14e9fdec0c58114451e4bf
       - uses: actions/setup-python@7f80679172b057fc5e90d70d197929d454754a5a
         with:
-          python-version: 3.9
+          python-version: 3.8
           architecture: x64
 
       - uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         env:
-          PYO3_PYTHON: python3.9
+          PYO3_PYTHON: python3.8
         with:
           command: build
           args: --release -o dist --universal2
