--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,13 +1,13 @@
 name: Test & Release
 
-# on:
-#   push:
-#     tags:
-#       - '*'
 on:
-  pull_request:
-    branches:
-      - master
+  push:
+    tags:
+      - '*'
+# on:
+#   pull_request:
+#     branches:
+#       - master
 
 jobs:
   create-release:
@@ -147,32 +147,32 @@ jobs:
         with:
           asset_paths: '["./dist/tantivy-*"]'
 
-  release-pypy:
-    name: Release
-    runs-on: ubuntu-latest
-    needs: [ macos, windows, linux ]
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504
-        with:
-          egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
+  # release-pypy:
+  #   name: Release
+  #   runs-on: ubuntu-latest
+  #   needs: [ macos, windows, linux ]
+  #   steps:
+  #     - name: Harden Runner
+  #       uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504
+  #       with:
+  #         egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
 
-      - uses: actions/download-artifact@fb598a63ae348fa914e94cd0ff38f362e927b741  # 3.0.0
-        with:
-          name: wheels
+  #     - uses: actions/download-artifact@fb598a63ae348fa914e94cd0ff38f362e927b741  # 3.0.0
+  #       with:
+  #         name: wheels
 
-      - name: Publish to PyPI Tests
-        uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
-        env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        with:
-          command: upload
-          args: --repository-url=https://test.pypi.org/legacy/ --skip-existing *
+  #     - name: Publish to PyPI Tests
+  #       uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
+  #       env:
+  #         MATURIN_PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
+  #       with:
+  #         command: upload
+  #         args: --repository-url=https://test.pypi.org/legacy/ --skip-existing *
 
-      - name: Publish to PyPI
-        uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
-        env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-        with:
-          command: upload
-          args: --skip-existing *
+  #     - name: Publish to PyPI
+  #       uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
+  #       env:
+  #         MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+  #       with:
+  #         command: upload
+  #         args: --skip-existing *
