--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         python-version: [3.9]
         include:
           - os: ubuntu-latest
-            python-version: "3.11.0-alpha - 3.11.0"
+            python-version: "3.11-dev"
           - os: ubuntu-latest
             python-version: "3.10"
           - os: ubuntu-latest
