--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,10 +4,10 @@ on:
   push:
     tags:
       - '*'
-# on:
-#   pull_request:
-#     branches:
-#       - master
+on:
+  pull_request:
+   branches:
+     - master
 
 jobs:
   create-release:
