--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           components: rustfmt
 
       - name: Check Formatting
-        run: rustfmt --check src/*rs
+        run: rustfmt --check src/*.rs
 
   Test:
     strategy:
