Upgrade to Tantivy 0.19.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,16 +11,15 @@ name = "tantivy"
 crate-type = ["cdylib"]
 
 [build-dependencies]
-pyo3-build-config = { version = "0.18.0", registry = "github-quiq-sh" }
+pyo3-build-config = { version = "0.18.0" }
 
 [dependencies]
-chrono = { version = "0.4.23", registry = "github-quiq-sh" }
-tantivy = { version = "0.19.1", registry = "github-quiq-sh" }
-itertools = { version = "0.10.5", registry = "github-quiq-sh" }
-futures = { version = "0.3.26", registry = "github-quiq-sh" }
-serde_json = { version = "1.0.91", registry = "github-quiq-sh" }
+chrono = { version = "0.4.23" }
+tantivy = { version = "0.19.1" }
+itertools = { version = "0.10.5" }
+futures = { version = "0.3.26" }
+serde_json = { version = "1.0.91" }
 
 [dependencies.pyo3]
 version = "0.18.0"
 features = ["extension-module"]
-registry = "github-quiq-sh"
