--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tantivy"
-version = "0.17.0"
+version = "0.19.1"
 readme = "README.md"
 authors = ["Damir Jelić <poljar@termina.org.uk>"]
 edition = "2018"
@@ -11,15 +11,15 @@ name = "tantivy"
 crate-type = ["cdylib"]
 
 [build-dependencies]
-pyo3-build-config = "0.16.3"
+pyo3-build-config = { version = "0.18.0" }
 
 [dependencies]
-chrono = "0.4.19"
-tantivy = "0.17"
-itertools = "0.10.3"
-futures = "0.3.21"
-serde_json = "1.0.64"
+chrono = { version = "0.4.23" }
+tantivy = { version = "0.19.1" }
+itertools = { version = "0.10.5" }
+futures = { version = "0.3.26" }
+serde_json = { version = "1.0.91" }
 
 [dependencies.pyo3]
-version = "0.16.3"
+version = "0.18.0"
 features = ["extension-module"]
