--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,14 @@ name = "tantivy"
 crate-type = ["cdylib"]
 
 [build-dependencies]
-pyo3-build-config = { version = "0.18.0" }
+pyo3-build-config = "0.18.0"
 
 [dependencies]
-chrono = { version = "0.4.23" }
-tantivy = { version = "0.19.2" }
-itertools = { version = "0.10.5" }
-futures = { version = "0.3.26" }
-serde_json = { version = "1.0.91" }
+chrono = "0.4.23"
+tantivy = "0.19.2"
+itertools = "0.10.5"
+futures = "0.3.26"
+serde_json = "1.0.91"
 
 [dependencies.pyo3]
 version = "0.18.0"
