Use cargo fmt instead of rustfmt on the Lint ci step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           toolchain: stable
           components: rustfmt
       - name: Check Formatting
-        run: rustfmt --check src/*rs
+        run: cargo fmt --check
 
   Test:
     strategy:
