--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,178 +1,200 @@
 name: Test & Release
 
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types: [published]
+
 # on:
 #   pull_request:
 #     branches:
 #       - master
 
 jobs:
-  create-release:
-    permissions:
-      contents: write  # for actions/create-release to create a release
-    name: create-release
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.release.outputs.upload_url }}
-      release_version: ${{ env.RELEASE_VERSION }}
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504 # v1
-        with:
-          egress-policy: audit
-
-      - name: Get the release version from the tag
-        shell: bash
-        if: env.RELEASE_VERSION == ''
-        run: |
-          # See: https://github.community/t5/GitHub-Actions/How-to-get-just-the-tag-name/m-p/32167/highlight/true#M1027
-          echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-          echo "version is: ${{ env.RELEASE_VERSION }}"
-
-      - name: Create GitHub release
-        id: release
-        uses: actions/create-release@0cb9c9b65d5d1901c1f53e5e66eaf4afd303e70e # v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.RELEASE_VERSION }}
-          release_name: ${{ env.RELEASE_VERSION }}
-
   linux:
     runs-on: ubuntu-latest
-    needs: create-release
+    strategy:
+      matrix:
+        platform: [ 'x86_64-unknown-linux-gnu', 'aarch64-unknown-linux-gnu' ]
     steps:
       - name: Harden Runner
-        uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504
+        uses: step-security/harden-runner@1f99358870fe1c846a3ccba386cc2b2246836776
         with:
-          egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
+          egress-policy: block
+          allowed-endpoints: >
+            api.github.com:443
+            cdn03.quay.io:443
+            crates.io:443
+            github.com:443
+            objects.githubusercontent.com:443
+            quay.io:443
+            sh.rustup.rs:443
+            static.crates.io:443
+            static.rust-lang.org:443
+            uploads.github.com:443
+            pypi.org:443
+            files.pythonhosted.org:443
+            ghcr.io:443
+            pkg-containers.githubusercontent.com:443
 
-      - uses: actions/checkout@d171c3b028d844f2bf14e9fdec0c58114451e4bf
-      - uses: actions/setup-python@7f80679172b057fc5e90d70d197929d454754a5a
+      - uses: actions/checkout@61b9e3751b92087fd0b06925ba6dd6314e06f089
+      - uses: actions/setup-python@d27e3f3d7c64b4bbf8e4abfb9b63b83e846e0435
         with:
           python-version: 3.8
           architecture: x64
 
-      - uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
-        env:
-          PYO3_PYTHON: python3.8
+      - uses: messense/maturin-action@49e11751aa9751fc4db9c247b8910702ee225df9
         with:
-          target: x86_64
+          rust-toolchain: stable
           manylinux: auto
+          target: ${{ matrix.platform }}
           command: build
-          args: --release --sdist -o dist
+          args: --release --sdist -o dist -i 3.8 3.9 3.10 3.11
 
       - name: Upload wheels
-        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8  # 3.1.0
+        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce  # 3.1.2
         with:
           name: wheels
           path: dist
 
-      - name: Upload release binaries
-        uses: alexellis/upload-assets@eaab1472d5c2f0df3115cac81136f03e7e61f771
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          asset_paths: '["./dist/tantivy-*"]'
-
   windows:
     runs-on: windows-latest
-    needs: create-release
+    strategy:
+      matrix:
+        target: [x64]
+        python-version: ['3.8', '3.9', '3.10', '3.11']
     steps:
       - name: Harden Runner
-        uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504
+        uses: step-security/harden-runner@1f99358870fe1c846a3ccba386cc2b2246836776
         with:
           egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
 
-      - uses: actions/checkout@d171c3b028d844f2bf14e9fdec0c58114451e4bf
-      - uses: actions/setup-python@7f80679172b057fc5e90d70d197929d454754a5a
+      - uses: actions/checkout@61b9e3751b92087fd0b06925ba6dd6314e06f089
+      - uses: actions/setup-python@d27e3f3d7c64b4bbf8e4abfb9b63b83e846e0435
         with:
-          python-version: 3.8
+          python-version: ${{ matrix.python-version }}
 
-      - uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
+      - uses: messense/maturin-action@49e11751aa9751fc4db9c247b8910702ee225df9
         env:
-          PYO3_PYTHON: python3.8
+          PYO3_PYTHON: python${{ matrix.python-version }}
         with:
           command: build
           args: --release -o dist
 
       - name: Upload wheels
-        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8  # 3.1.0
+        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce  # 3.1.2
         with:
           name: wheels
           path: dist
 
+  macos:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11']
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@1f99358870fe1c846a3ccba386cc2b2246836776
+        with:
+          egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
+
+      - uses: actions/checkout@61b9e3751b92087fd0b06925ba6dd6314e06f089
+      - uses: actions/setup-python@d27e3f3d7c64b4bbf8e4abfb9b63b83e846e0435
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Build wheels - x86_64
+        uses: messense/maturin-action@49e11751aa9751fc4db9c247b8910702ee225df9
+        env:
+          PYO3_PYTHON: python${{ matrix.python-version }}
+        with:
+          target: x86_64-apple-darwin
+          command: build
+          args: --release -o dist
+
+      - name: Build wheels - universal2
+        uses: messense/maturin-action@49e11751aa9751fc4db9c247b8910702ee225df9
+        env:
+          PYO3_PYTHON: python${{ matrix.python-version }}
+        with:
+          command: build
+          args: --release -o dist --universal2
+
+      - name: Upload wheels
+        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce  # 3.1.2
+        with:
+          name: wheels
+          path: dist
+
+  python-release-github:
+    runs-on: ubuntu-latest
+    needs: [ macos, windows, linux ]
+    permissions:
+      contents: write # To add assets to a release.
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@1f99358870fe1c846a3ccba386cc2b2246836776 # v2.1.0
+        with:
+          disable-sudo: true
+          egress-policy: block
+          allowed-endpoints: >
+            api.github.com:443
+            github.com:443
+            static.rust-lang.org:443
+            uploads.github.com:443
+
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+        with:
+          ref: ${{ github.head_ref }}
+
+      - uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af # v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@d27e3f3d7c64b4bbf8e4abfb9b63b83e846e0435 # v4.5.0
+        with:
+          python-version: 3.8
+
+      - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
+        with:
+          name: wheels
+          path: wheels
+
       - name: Upload release binaries
-        uses: alexellis/upload-assets@eaab1472d5c2f0df3115cac81136f03e7e61f771
+        uses: alexellis/upload-assets@259de5111cb56966d046ced998941e93f91d2c93
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          asset_paths: '["./dist/tantivy-*"]'
+          asset_paths: '["./wheels/tantivy-*"]'
 
-  macos:
-    runs-on: macos-latest
-    needs: create-release
+  release-pypy:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [ macos, windows, linux ]
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504
         with:
           egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
 
-      - uses: actions/checkout@d171c3b028d844f2bf14e9fdec0c58114451e4bf
-      - uses: actions/setup-python@7f80679172b057fc5e90d70d197929d454754a5a
-        with:
-          python-version: 3.8
-          architecture: x64
-
-      - uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
-        env:
-          PYO3_PYTHON: python3.8
-        with:
-          command: build
-          args: --release -o dist --universal2
-
-      - name: Upload wheels
-        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8  # 3.1.0
+      - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
         with:
           name: wheels
-          path: dist
+          path: wheels
 
-      - name: Upload release binaries
-        uses: alexellis/upload-assets@eaab1472d5c2f0df3115cac81136f03e7e61f771
+      - name: Publish to PyPI Tests
+        uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MATURIN_PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
         with:
-          asset_paths: '["./dist/tantivy-*"]'
+          command: upload
+          args: --repository-url=https://test.pypi.org/legacy/ --skip-existing *
 
-  # release-pypy:
-  #   name: Release
-  #   runs-on: ubuntu-latest
-  #   needs: [ macos, windows, linux ]
-  #   steps:
-  #     - name: Harden Runner
-  #       uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504
-  #       with:
-  #         egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
-
-  #     - uses: actions/download-artifact@fb598a63ae348fa914e94cd0ff38f362e927b741  # 3.0.0
-  #       with:
-  #         name: wheels
-
-  #     - name: Publish to PyPI Tests
-  #       uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
-  #       env:
-  #         MATURIN_PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
-  #       with:
-  #         command: upload
-  #         args: --repository-url=https://test.pypi.org/legacy/ --skip-existing *
-
-  #     - name: Publish to PyPI
-  #       uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
-  #       env:
-  #         MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-  #       with:
-  #         command: upload
-  #         args: --skip-existing *
+      - name: Publish to PyPI
+        uses: messense/maturin-action@49e11751aa9751fc4db9c247b8910702ee225df9
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        with:
+          command: upload
+          args: --skip-existing *
