--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["maturin>=0.13,<0.14"]
+requires = ["maturin<=1.3.1"]
 build-backend = "maturin"
 
 [project]
 name = "tantivy"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 
 [project.optional-dependencies]
 dev = [
